# gaatha-server

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  docker-compose.yml  gh-docker-compose.yml  manage.py  pyproject.toml  pytest.ini  schema.graphql  utils.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  graphql-inspector.yml  graphql_inspector.yml  helm-publish.yaml  helm-publish.yml  publish-helm.yml
apps/people/: admin.py  factories.py  models.py  types.py
apps/people/migrations/: 0001_initial.py  0002_alter_people_art_work_alter_people_profile_picture.py  0003_people_order.py  0004_people_is_founder.py  0005_alter_people_art_work_alter_people_profile_picture.py
apps/people/tests/: query_test.py  test_query.py
apps/project/: admin.py  factories.py  models.py  types.py
apps/project/migrations/: 0001_initial.py  0002_alter_project_options.py
apps/project/tests/: test_query.py
apps/work/: admin.py  apps.py  dataloaders.py  enums.py  factories.py  filters.py  forms.py  models.py  types.py
apps/work/management/commands/: generate_schema.py  wait_for_resources.py
apps/work/migrations/: 0001_initial.py  0002_work_is_cover_image_dark.py  0003_work_order.py  0004_work_sub_title.py  0005_remove_work_tag_delete_worktag.py  0006_work_work_type.py  0007_alter_work_art_work_alter_work_cover_image_and_more.py
apps/work/tests/: query_test.py  test_query.py
gaatha/: asgi.py  enums.py  graphql.py  schema.py  settings.py  tests.py  types.py  urls.py  utils.py  wsgi.py
helm/: .gitignore  .helmignore  Chart.yaml  linter_values.yaml  values.yaml
scripts/: run_develop.sh  run_tests.sh
