[tool.poetry]
name = "gaatha"
version = "0.1.0"
description = ""
authors = ["TC-DEV <dev@togglecorp.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.5"
django-environ = ">=0.9.0"
psycopg2 = "^2.9.5"
strawberry-graphql = "0.151.2"
pillow = "^9.4.0"
strawberry-graphql-django = "0.8.2"
starlette = "^0.23.1"
django-tinymce = "^3.5.0"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
