[project]
name = "gaatha"
version = "0.1.0"
description = ""
authors = [
    {name = "TC-DEV", email = "dev@togglecorp.com"},
]
requires-python = "~=3.11"
dependencies = [
   "Django<5.0.0,>=4.1.5",
   "django-environ>=0.9.0",
   "psycopg2<3.0.0,>=2.9.5",
   "pillow",
   "strawberry-graphql==0.151.2",
   "strawberry-graphql-django==0.8.2",
   "starlette<1.0.0,>=0.23.1",
   "django-tinymce<4.0.0,>=3.5.0",
   "pytest-django<5.0.0,>=4.5.2",
   "factory-boy<4.0.0,>=3.2.1",
   "redis>=6.3.0",
   "opencv-python-headless>=4.12.0.88",
   "gunicorn>=23.0.0",
]
[dependency-groups]
dev = []
[tool.uv]
package = false
