[project]
name = "gaatha"
version = "0.1.0"
description = ""
authors = [
    {name = "TC-DEV", email = "dev@togglecorp.com"},
]
requires-python = "~=3.11"
dependencies = [
   "Django<5.0.0,>=4.1.5",
   "django-environ>=0.9.0",
   "psycopg2<3.0.0,>=2.9.5",
   "pillow",
   "strawberry-graphql==0.151.2",
   "strawberry-graphql-django==0.8.2",
   "starlette<1.0.0,>=0.23.1",
   "django-tinymce<4.0.0,>=3.5.0",
   "pytest-django<5.0.0,>=4.5.2",
   "factory-boy<4.0.0,>=3.2.1",
   "opencv-python-headless>=4.12.0.88",
   "gunicorn>=23.0.0",
   "requests>=2.32.4",
   "django-storages[s3]>=1.14.6",
]
[dependency-groups]
dev = [
    "django-debug-toolbar",
    "django-stubs",
    "ipython",
    "colorlog",
]
test = [
    "pytest-django",
    "pytest-icdiff",
    "pytest-ordering",
    "pytest-profiling",
]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"
log_cli = true

[tool.ruff]
line-length = 125
extend-exclude = [
    ".git",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "**/migrations/*",
    "__pycache__",
]

[tool.ruff.lint]
flake8-builtins.builtins-strict-checking = false
extend-select = [
    "I",  # isort
    "E",  # pycodestyle
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "W",  # pycodestyle
    "DJ",  # flake8-django
    "AIR",  # airflow
    "COM",  # flake8-commas
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",  # flake8-logging-format
    "T20",  # flake8-print
    "TID",  # flake8-tidy-imports
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TC",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "UP",  # pyupgrad

    "D", # pydocstyle
    "ASYNC",  # flake8-async
    "S",  # flake8-bandit
    "BLE",  # blind-except
    # "FBT",  # flake8-boolean-trap
    # "C4",  # flake8-comprehensions
    # "DTZ",  # flake8-datetimez
    # "EM",  # flake8-errmsg
    "FA",  # flake8-future-annotations
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "RSE",  # flake8-raise
    # "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "FLY",  # flynt
    "C90",  # mccabe
    # "N",  # pep8-naming
    # "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "PLC",  # Convention
    "PLE",  # Error
    # "PLR",  # Refactor
    "PLW",  # Warning
    "FURB",  # refurb
    "RUF",  # Ruff-specific rules
    "TRY",  # tryceratops
]

ignore = [
    "C901",  # C90 complex-structure
    "E701",  # E multiple-statements-on-one-line-colon
    "E203",  # E whitespace-before-punctuation
    "DJ001",  # DJ django-nullable-model-string-field
    # FIXME(thenav56): Check if we can enable G201 and keep sending logs to sentry
    "G201",  # G logging-exc-info

    "BLE001",  # BLE blind-except (NOTE: "except Exception" is already explicitly defined)
    "S101",  # S assert
    "S608",  # hardcoded-sql-expression
    "RUF012",  # mutable-class-default
    "TRY300",  # try-consider-else
    "TRY003",  # raise-vanilla-args
    "TRY002",  # raise-vanilla-class
    "TRY301",  # raise-within-try
    "TRY400",  # error-instead-of-exception

    "D100",  # undocumented-public-moduleg
    "D102",  # undocumented-public-methodg
    "D103",  # undocumented-public-functiong
    "D104",  # undocumented-public-packageg
    "D105",  # undocumented-magic-methodg
    "D106",  # undocumented-public-nested-classg
    "D107",  # undocumented-public-initg
    "D401",
    "D205",
    "PT009",
    "PLC0415",
    "DJ007",
    "TC002",
    "A001",


]

#   ruff check --statistics ./

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"/**/tests/*_mock_data.py" = ["E501"]
"**/snap_test_*.py" = ["E501"]
"!./apps/**/models.py" = ["D101"]  # undocumented-public-class
[tool.uv]
package = false
